--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start:dev": "tsx --env-file=.env src/server.ts",
     "start:watch": "tsx --watch --env-file=.env src/server.ts",
     "dist": "tsup src",
-    "start:dist": "npm run dist && node --env-file=.env dist/server.cjs"
+    "start:dist": "npm run dist && node --env-file=.env dist/server.js"
   },
   "keywords": [],
   "author": "Thalia Danielle",
